// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack  1`] = `
<View
  style={
    Object {
      "padding": 12,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  2`] = `
<View
  style={
    Object {
      "padding": 12,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  3`] = `
<View
  style={
    Object {
      "paddingHorizontal": 6,
      "paddingVertical": 12,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  4`] = `
<View
  style={
    Object {
      "paddingBottom": 15,
      "paddingHorizontal": 10,
      "paddingTop": 5,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  5`] = `
<View
  style={
    Object {
      "paddingBottom": 30,
      "paddingLeft": 40,
      "paddingRight": 20,
      "paddingTop": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  6`] = `
<View
  style={
    Object {
      "padding": "12",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  7`] = `
<View
  style={
    Object {
      "padding": "12",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  8`] = `
<View
  style={
    Object {
      "paddingHorizontal": "6",
      "paddingVertical": "12",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  9`] = `
<View
  style={
    Object {
      "paddingBottom": "15",
      "paddingHorizontal": "10",
      "paddingTop": "5",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  10`] = `
<View
  style={
    Object {
      "paddingBottom": "30",
      "paddingLeft": "40",
      "paddingRight": "20",
      "paddingTop": "10",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  11`] = `
<View
  style={
    Object {
      "paddingHorizontal": 6,
      "paddingVertical": "12",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  12`] = `
<View
  style={
    Object {
      "paddingBottom": "15",
      "paddingHorizontal": "10",
      "paddingTop": 5,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack  13`] = `
<View
  style={
    Object {
      "paddingBottom": 30,
      "paddingLeft": "40",
      "paddingRight": 20,
      "paddingTop": "10",
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack sholud render component without spaces 1`] = `
<View
  style={
    Object {
      "padding": 0,
    }
  }
>
  <Text>
    Hello
  </Text>
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should overwrite global options 1`] = `
<View
  style={
    Object {
      "padding": 16,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 12,
        "minWidth": 12,
      }
    }
  />
  <View
    style={
      Object {
        "padding": 30,
      }
    }
  >
    <Text>
      World
    </Text>
  </View>
</View>
`;

exports[`Stack should render component with arrayDivision 1`] = `
<View
  arrayDivision={true}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should render component with context provider 1`] = `
<View
  style={
    Object {
      "padding": 30,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 15,
        "minWidth": 15,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should render component with custom styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
      "padding": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should render component with debug mode enabled 1`] = `
<View
  style={
    Object {
      "borderColor": "#4951c6",
      "borderWidth": 30,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#4951c6",
        "minHeight": 15,
        "minWidth": 15,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should render component with horizontal layout 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should render component without context provider 1`] = `
<View
  style={
    Object {
      "padding": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
  <View
    style={
      Object {
        "minHeight": 20,
        "minWidth": 20,
      }
    }
  />
  <Text>
    World
  </Text>
</View>
`;

exports[`Stack should test omitNull 1`] = `
<View
  style={
    Object {
      "padding": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
</View>
`;
